# occt_test

./: .gitignore  CMakeLists.txt  Makefile  demo.py  main.cpp  occt.h  occt_stp_test.stp  pyocct.cpp  pyocct.h
